--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -20,6 +20,7 @@ all:
       http_host: RootAsWeb
       http_conf: rootasweb.conf
       http_port: 80
+      ansible_remote_tmp: /tmp
     webserver:
       ansible_user: lechatp
       ansible_become_pass: "lechatp"
@@ -31,3 +32,4 @@ all:
       http_host: RootAsWeb
       http_conf: rootasweb.conf
       http_port: 80
+      ansible_remote_tmp: /tmp
