--- a/playbooks/create-sshkey.yml
+++ b/playbooks/create-sshkey.yml
@@ -3,6 +3,7 @@
   hosts: localhost
   connection: local
   gather_facts: false
+  become: false
   tasks:
     - name: Generate SSH key
       community.crypto.openssh_keypair:
