--- a/scenario_sr_paper.yml
+++ b/scenario_sr_paper.yml
@@ -1,54 +1,44 @@
 ---
 - name: Ansible Playbook to Install and Setup Apache on Ubuntu
+  hosts: webserver
   become: true
   become_method: sr
-  become_flags: "-r deploy_apache"
-  hosts: webserver
+  gather_facts: false
   tasks:
-    - name: Use latest version of Apache
-      ansible.builtin.apt:
-        name: apache2
+    - name: Install latest version of Apache
+      become_flags: "-r deploy_apache -t install_apache2"
+      apt:
+        name: apache2,iptables
         update_cache: true
-        state: present
+        state: latest
 
     - name: Create document root for domain configured in host variable
-      ansible.builtin.file:
+      become_flags: "-r deploy_apache -t create_document_root"
+      file:
         path: "/var/www/{{ http_host }}"
         state: directory
         owner: www-data
         group: www-data
-        mode: '0755'
+        mode: '0775'
 
     - name: Deploy website source code
-      ansible.builtin.import_playbook:
-        playbook: deploy-website.yml
+      become_flags: "-r deploy_apache -t deploy_website"
+      ansible.builtin.import_tasks: tasks/deploy-website.yml
 
     - name: Set up virtualHost
-      ansible.builtin.template:
-        src: "{{ item }}"
+      become_flags: "-r deploy_apache -t setup_virtualhost"
+      template:
+        src: "../templates/apache-template.conf.j2"
         dest: "/etc/apache2/sites-available/{{ http_conf }}"
-        owner: www-data
-        group: www-data
-        mode: '0644'
-      vars:
-        item: '{{ lookup("first_found", dict(files=["templates/apache-template.conf.j2"], skip=True)) }}'
 
-    # Check if the Apache site is already enabled
-    - name: Check if the Apache site is enabled
-      ansible.builtin.stat:
-        path: "/etc/apache2/sites-enabled/{{ http_conf }}"
-      register: site_enabled
-
-    # Enable the site if it is not enabled
-    - name: Enable Apache site
-      ansible.builtin.command: a2ensite {{ http_conf }}
-      when: not site_enabled.stat.exists
-      changed_when: site_enabled.stat.exists
+    - name: Enable site
+      become_flags: "-r deploy_apache -t enable_site"
+      command: a2ensite {{ http_conf }}
       notify: restart-apache
-      become: true
 
-    - name: Open port 80
-      ansible.builtin.include_role:
+    - name: open port 80
+      become_flags: "-r deploy_apache -t 'open port 80'"
+      ansible.builtin.import_role:
         name: mallory.net_input
       vars:
         net_input_protocol: tcp
@@ -56,7 +46,8 @@
         net_input_state: accepting
 
   handlers:
-    - name: Restart-apache
-      ansible.builtin.service:
+    - name: restart-apache
+      become_flags: "-r deploy_apache -t restart_apache"
+      service:
         name: apache2
         state: restarted
