--- a/scenario.yml
+++ b/scenario.yml
@@ -24,6 +24,7 @@
 - name: Test Apache2
   connection: local
   hosts: localhost
+  become: false
   tasks:
     - name: Test Apache2
       ansible.builtin.uri:
@@ -33,6 +34,8 @@
 - name: Destroy docker
   hosts: localhost
   connection: local
+  become: true
+  become_method: sudo
   tasks:
     - name: Stop docker
       ansible.builtin.shell: docker stop $(docker ps -a -q)
