--- a/ansible.cfg
+++ b/ansible.cfg
@@ -32,7 +32,7 @@
 ;become_password_file=
 
 # (pathspec) Colon separated paths in which Ansible will search for Become Plugins.
-become_plugins={{ "./become_plugins" }}
+become_plugins = ./become_plugins
 
 # (string) Chooses which cache plugin to use, the default 'memory' is ephemeral.
 ;fact_caching=memory
@@ -79,7 +79,7 @@ become_plugins={{ "./become_plugins" }}
 ;cache_plugins={{ ANSIBLE_HOME ~ "/plugins/cache:/usr/share/ansible/plugins/cache" }}
 
 # (pathspec) Colon separated paths in which Ansible will search for Callback Plugins.
-;callback_plugins={{ ANSIBLE_HOME ~ "/plugins/callback:/usr/share/ansible/plugins/callback" }}
+callback_plugins= ./become_plugins
 
 # (pathspec) Colon separated paths in which Ansible will search for Cliconf Plugins.
 ;cliconf_plugins={{ ANSIBLE_HOME ~ "/plugins/cliconf:/usr/share/ansible/plugins/cliconf" }}
