--- a/main_sr.yml
+++ b/main_sr.yml
@@ -18,7 +18,7 @@
   gather_facts: false
   tasks:
     - name: Deploy RootAsRole roles
-      ansible.builtin.import_tasks: tasks/deploy_roles.yml
+      ansible.builtin.import_tasks: tasks/deploy_sr_roles.yml
 - name: Install Apache2
   ansible.builtin.import_playbook: scenario_sr_paper.yml
 - name: Test Apache2
@@ -31,15 +31,31 @@
         url: "http://{{ ansible_host }}/index.html"
         status_code: 200
   ignore_errors: true
+- name: Read RootAsRole generated policy
+  hosts: docker
+  gather_facts: false
+  become: true
+  tasks:
+    - name: Get RootAsRole policy contents
+      ansible.builtin.command: cat /etc/security/rootasrole.json
+      register: rar_policy
+      become: true
+      changed_when: false
+    - name: Viewing RootAsRole policy
+      ansible.builtin.debug:
+        msg: "{{ rar_policy.stdout }}"
+      changed_when: false
 - name: Destroy docker
   hosts: localhost
   connection: local
   become: true
-  become_method: sudo
+  become_method: ansible.builtin.sudo
   tasks:
     - name: Stop docker
       ansible.builtin.shell: docker stop $(docker ps -a -q)
-      when: "keep_docker != true"
+      changed_when: false
+      when: "keep_docker"
     - name: Remove docker
       ansible.builtin.shell: docker rm $(docker ps -a -q)
-      when: "keep_docker != true"
+      when: "not keep_docker"
+      changed_when: false
