Update installation process

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -79,7 +79,7 @@ become_plugins = ./become_plugins
 ;cache_plugins={{ ANSIBLE_HOME ~ "/plugins/cache:/usr/share/ansible/plugins/cache" }}
 
 # (pathspec) Colon separated paths in which Ansible will search for Callback Plugins.
-callback_plugins= ./become_plugins
+callback_plugins= ./callback_plugins
 
 # (pathspec) Colon separated paths in which Ansible will search for Cliconf Plugins.
 ;cliconf_plugins={{ ANSIBLE_HOME ~ "/plugins/cliconf:/usr/share/ansible/plugins/cliconf" }}
