--- a/main.yml
+++ b/main.yml
@@ -3,6 +3,14 @@
   import_playbook: playbooks/create-sshkey.yml
 - name: Start docker
   import_playbook: playbooks/start-docker.yml
+- name: Install Rust
+  hosts: docker
+  connection: ssh
+  become: false
+  gather_facts: true
+  tasks:
+    - name: Import Rust installation tasks
+      ansible.builtin.import_tasks: tasks/install-rust.yml
 - name: Install RootAsRole
   hosts: docker
   connection: ssh
@@ -10,9 +18,9 @@
   roles:
     - rootasrole
   vars:
-    command: "installed"
-    sr_password: "no"
-  ignore_errors: true
+    rootasrole_command: "install"
+    rootasrole_branch: "main"
+    rootasrole_sr_password: "no"
 - name: On Docker,
   hosts: docker
   gather_facts: false
