--- a/roles/rootasrole/tasks/main.yml
+++ b/roles/rootasrole/tasks/main.yml
@@ -1,28 +1,28 @@
 ---
 - name: Install RootAsRole
   ansible.builtin.include_tasks: install.yml
-  when: command == 'install'
+  when: rootasrole_command == 'install'
 
 - name: List Roles/Tasks/Actors in RootAsRole
   ansible.builtin.include_tasks: list.yml
-  when: command == 'list'
+  when: rootasrole_command == 'list'
 
 - name: Create new role
   ansible.builtin.include_tasks: role.yml
-  when: command == 'newrole'
+  when: rootasrole_command == 'newrole'
 
 - name: Add Task to Role
   ansible.builtin.include_tasks: task.yml
-  when: command == 'task'
+  when: rootasrole_command == 'task'
 
 - name: Assign Actor to Role
   ansible.builtin.include_tasks: grant.yml
-  when: command == 'grant'
+  when: rootasrole_command == 'grant'
 
 - name: Remove Actor from Role
   ansible.builtin.include_tasks: revoke.yml
-  when: command == 'revoke'
+  when: rootasrole_command == 'revoke'
 
 - name: Option edition
   ansible.builtin.include_tasks: option.yml
-  when: command == 'option'
+  when: rootasrole_command == 'option'
