--- a/roles/rootasrole/tasks/role.yml
+++ b/roles/rootasrole/tasks/role.yml
@@ -1,6 +1,6 @@
 ---
 - name: Create new role
-  ansible.builtin.command: 'chsr newrole {{ role_name }}'
+  ansible.builtin.command: 'chsr newrole {{ rootasrole_role_name }}'
   register: newrole
   changed_when: newrole.rc == 0
   failed_when: newrole.rc != 0
