--- a/roles/rootasrole/tasks/install_rust.yml
+++ b/roles/rootasrole/tasks/install_rust.yml
@@ -1,15 +1,15 @@
 ---
 - name: Check if cargo is installed
   ansible.builtin.command:
-    cmd: cargo -V
-  register: cargo_exists
+    cmd: rustup toolchain list | grep -q "{{ rustup_toolchain | default('stable') }}"
+  register: rustup_toolchain_list
   failed_when: false
   changed_when: false
   environment:
     PATH: "{{ ansible_env.PATH }}:{{ ansible_env.HOME }}/.cargo/bin"
 
 - name: Download Installer
-  when: cargo_exists.rc != 0
+  when: rustup_toolchain_list.rc != 0
   ansible.builtin.get_url:
     url: https://sh.rustup.rs
     dest: /tmp/sh.rustup.rs
@@ -19,14 +19,14 @@
     - rust
 
 - name: Install rust/cargo
-  when: cargo_exists.rc != 0
-  ansible.builtin.command: /tmp/sh.rustup.rs -y
+  when: rustup_toolchain_list.rc != 0
+  ansible.builtin.command: /tmp/sh.rustup.rs -y --default-toolchain {{ rustup_toolchain | default('stable') }} {{ rustup_flags | default('') }}
   tags:
     - rust
   changed_when: false
 
 - name: Rustup update
-  when: cargo_exists.rc == 0
+  when: rustup_toolchain_list.rc != 0
   ansible.builtin.command: rustup update
   changed_when: false
   environment:
