Policy generation works without issues

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -32,4 +32,5 @@ all:
       http_host: RootAsWeb
       http_conf: rootasweb.conf
       http_port: 80
+      http_log_dir: /var/log/apache2
       ansible_remote_tmp: /tmp
