--- a/scenario/roles/rootasrole/tasks/install_capable.yml
+++ b/scenario/roles/rootasrole/tasks/install_capable.yml
@@ -46,17 +46,12 @@
   failed_when: false
   changed_when: false
 
-- name: Clone Capable repository
+- name: Copy Capable repository from artifacts
   when: capable.rc != 0
-  ansible.builtin.git:
-    repo: 'https://github.com/LeChatP/RootAsRole-capable.git'
+  ansible.posix.synchronize:
+    src: "{{ role_path }}/../../artifacts/RootAsRole-capable/"
     dest: '/tmp/RootAsRole-capable'
-    clone: true
-    update: true
-    force: true
-    version: "{{ rootasrole_branch }}"
   become: false
-  register: git
 
 - name: Performing install
   when: sr.rc != 0
