refactor: replace hardcoded username

--- a/scenario/inventory/hosts.yml
+++ b/scenario/inventory/hosts.yml
@@ -8,19 +8,19 @@ all:
   hosts:
     localhost:
       ansible_connection: local
-      ansible_user: lechatp
+      ansible_user: "{{ lookup('env', 'USER') }}"
       keep_docker: false
       ssh_key_path: "{{ inventory_dir }}/ansible_rsa"
       dockerfile: "Dockerfile"
       webserver_ip: 172.21.0.2
     docker:
       ansible_host: 172.21.0.2
-      ansible_user: lechatp
-      ansible_become_pass: "lechatp"
+      ansible_user: "{{ lookup('env', 'USER') }}"
+      ansible_become_pass: "{{ lookup('env', 'USER') }}"
     webserver:
       ansible_host: 172.21.0.2 
-      ansible_user: lechatp
-      ansible_become_pass: "lechatp"
+      ansible_user: "{{ lookup('env', 'USER') }}"
+      ansible_become_pass: "{{ lookup('env', 'USER') }}"
       http_host: RootAsWeb
       http_conf: rootasweb.conf
       http_port: 80
