--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ansible pyyaml requests docker
+        pip install ansible docker pyyaml
         ansible-galaxy collection install community.docker
 
     - name: Run RootAsAnsible Demo
       run: |
-        sudo --preserve-env=PATH python3 main.py --clean --discover --enforce
+        python3 main.py --clean --discover --enforce
